--- a/documentation/STIR-glossary.tex
+++ b/documentation/STIR-glossary.tex
@@ -14,7 +14,7 @@
 \end{center}
 
 \begin{center}
-\textit{Version 6.0}\\
+\textit{Version 6.2}\\
 Originally based on PARAPET Deliverable 4.1,
 Extended for Quantitative Reconstruction and motion compensation
 
@@ -207,7 +207,7 @@ is defined as the ratio of the \textbf{Maximum number of (unmashed) TOF time bin
 by the scanner (in list-mode) over the actual number of TOF bins. Currently in STIR, this
 ratio has to be an integer. The size of a TOF bin is computed by multiplying the
 \textbf{TOF mashing factor} with the \textbf{size of unmashed TOF time bins}, with the latter
-defined as a scanner property.\\
+defined as a scanner property. \texttt{SSRB} can be used to increase the TOF mashing factor.\\
 Note that many PET scanners use a \textbf{TOF mashing factor} greater than 1
 for their standard histogrammed projection data.
 
