--- a/documentation/STIR-UsersGuide.tex
+++ b/documentation/STIR-UsersGuide.tex
@@ -44,7 +44,7 @@
 \\[3cm]
 
 \textbf{{\huge User's Guide\\
- Version 6.1}}
+ Version 6.2}}
 \end{center}
 
 \end{spacing}
@@ -1092,17 +1092,18 @@ The \textit{STIR} implementation of SSRB is a generalisation that applies
 the same idea while still allowing preserving some of the obliqueness. 
 For instance, for a dataset with 9 segments, \textbf{SSRB} can produce 
 a new dataset with only 3 segments. This essentially increases 
-the axial compression (or \textit{span} in CTI terminology), see the 
+the axial compression (or \textit{span} in CTI/Siemens terminology), see the 
 \textit{STIR} Glossary on axial compression. In addition, \textbf{SSRB} can 
 introduce extra \textit{mashing} (see the \textit{STIR} Glossary) of the data, 
-i.e. add views together.
+i.e. add views and/or TOF bins together.
 
 
 \textit{Usage:}
 
 \cmdline{SSRB output\_filename input\_projdata\_name {\textbackslash} \\
 num\_segments\_to\_combine [num\_views\_to\_combine {\textbackslash}\\
-{[}do\_normalisation [max\_in\_segment\_num\_to\_process ]]]}
+{[}do\_normalisation [max\_in\_segment\_num\_to\_process {\textbackslash}\\
+{[}num\_tof\_bins\_to\_combine ]]]]}
 or
 \cmdline{SSRB --template template\_filename output\_filename input\_projdata\_name [do\_normalisation]}
 
@@ -1116,8 +1117,8 @@ data to combine.
 the result is normalised, i.e. divided by \textit{num\_segments\_to\_combine*num\_views\_to\_combine}. 
 This is appropriate for rebinning data where normalisation has 
 already been applied, but inappropriate otherwise.
-
-\item[template\_filename] inicated by the \textit{--template} flag, 
+\item[num\_tof\_bins\_to\_combine] defaults to 1, so TOF bins are not combined.
+\item[template\_filename] indicated by the \textit{--template} flag, 
 is the sinogram type that the \textit{input\_projdata\_name} will 
 be mapped to. This allows for the effective use of 
 \textit{num\_segments\_to\_combine} to be an even number, 
@@ -4446,6 +4447,12 @@ This implements a Relative Difference Prior RDP, proposed by J. Nuyts, et.al., 2
   END Relative Difference Prior Parameters:=
   \end{verbatim}
 
+  Note that if you have the \em{CUDA} drivers (and toolkit when building), setting
+  \begin{verbatim}
+  prior type := Cuda Relative Difference Prior
+  \end{verbatim}
+  will enable a \em{CUDA} implementation (with some restrictions). Other parameter
+  settings are identical.
 
 { \subsubsubsection{Logcosh} \label{sec:priors:Logcosh}
 }
